--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand page-scroll" href="#page-top">
-                        <i class="fa fa-play-circle"></i>  <span class="light">PBIOC</span>
+                        <span class="light">PBIOC</span>   <img src="img/pbios-logo.png" alt="pbios-logo" class="pbioc-logo"/>
                     </a>
                 </div>
 
