Did some styling on the navbar

--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
             </div>
         </section>
 
-        <section id="methods">
+        <section id="methods" class="shadower">
             <div class="bcg" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;"
                 data-anchor-target="#methods" style="background-position: 50% 0px;">
                 <div class="hsContainer">
