--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,8 @@
                                 <a class="page-scroll navbar-right-custom" href="#contacts">Contact</a>
                             </li>
                             <li class="controlls">
-                                <img class="lang-flag" src="img/flags/en.png" alt="en" />
-                                <img class="lang-flag" src="img/flags/bg.png" alt="bg" />
+                                <img class="lang-flag" src="img/flags/en.png" alt="en" style="cursor:pointer" />
+                                <img class="lang-flag" src="img/flags/bg.png" alt="bg" style="cursor:pointer" />
                             </li>
                             <li class="controlls">
                                 <span class="volume-btn">
@@ -75,7 +75,6 @@
                                 </span>
                                 <span class="subs-btn">
                                     <input type='checkbox' name='subs-toggle' value='valuable' id="subs-toggle" class="subs-btn" checked />
-                                    <label for="subs-toggle" class="fa fa-lg"></label>
                                 </span>
                             </li>
                         </ul>
