Updated contacts information

--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
                             <table>
                                 <tr>
                                     <td><i class="fa fa-home fa-2x"></i></td>
-                                    <td>Arh. Jordan Milanov str. 38</td>
+                                    <td>38 Architect Jordan Milanov str.</td>
                                 </tr>
                                 <tr>
                                     <td><i class="fa fa-mobile fa-3x"></i></td>
