- Removed subs. - Removed unused styles from LESS file. - Made new use of the default HTML5 video player and disabled the   BigVideo player.

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">
 
-   
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -28,64 +28,40 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    <div class="main">
-        <header>
-            <!-- Navigation -->
-            <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                            <i class="fa fa-bars"></i>
-                        </button>
-                        <a class="navbar-brand page-scroll" href="#page-top">
-                            <img src="img/pbios-logo.png" alt="pbios-logo" class="pbioc-logo" />
-                            <span class="light">PBIOC</span>
-                        </a>
-                    </div>
+<body id="page-top" data-spy="scroll">
 
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                        <ul class="nav navbar-nav">
+    <div id="wrapper" class="toggled">
 
-                            <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                            <li class="hidden">
-                                <a href="#page-top"></a>
-                            </li>
-                            <li>
-                                <a class="page-scroll navbar-right-custom" href="#team">Team</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll navbar-right-custom" href="#methods">Methods</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll navbar-right-custom" href="#pricing">Pricing</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll navbar-right-custom" href="#contacts">Contact</a>
-                            </li>
-                            <li class="controlls">
-                                <img class="lang-flag" src="img/flags/en.png" alt="en" style="cursor:pointer"  />
-                                <img class="lang-flag" src="img/flags/bg.png" alt="bg" style="cursor:pointer"  />
-                                <img class="lang-flag" src="img/flags/gr.png" alt="en" style="cursor:pointer"  />
-                                <img class="lang-flag" src="img/flags/fr.png" alt="bg" style="cursor:pointer"  />
-                            </li>
-                            <li class="controlls">
-                                <span class="volume-btn">
-                                    <input type='checkbox' name='sound-toggle' value='valuable' id="sound-toggle" />
-                                    <label for="sound-toggle" class="fa fa-lg"></label>
-                                </span>
-                                <span class="subs-btn">
-                                    <input type='checkbox' name='subs-toggle' value='valuable' id="subs-toggle" class="subs-btn" checked />
-                                    <label for="subs-toggle" class="fa fa-lg"></label>
-                                </span>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.container -->
-            </nav>
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Start Bootstrap
+                    </a>
+                </li>
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#team">Team</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#methods">Methods</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#pricing">Pricing</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#contacts">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
 
-            <!-- Intro Header -->
+        <div class="main" id="page-content-wrapper" >
+            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle" style="position: absolute; top: 10px;">Toggle Menu</a>
+            <!-- Arrow -->
             <div class="intro">
                 <div class="intro-body">
                     <div class="container">
@@ -99,94 +75,103 @@
                     </div>
                 </div>
             </div>
-        </header>
-        <!-- Sections  -->
 
-        <section id="team">
-            <div class="bcg" data-0="background-postition: 110% 80%;" data-top="background-position: 150% 90%;" data-anchor-target="#team">
-                <div class="hsContainer">
-                    <div class="hsContent">
-                        <h2 data-center="opacity: 1" data--200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0"
-                            data-anchor-target="#team h2" class="">Fade me in and out</h2>
-                        <p data-center="opacity: 1" data--200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0"
-                            data-anchor-target="#team h2" class="">
-                            Here we are changing the background color from blue to black. Text is fading
-                        in at 206 pixels from the bottom and fading out 106 pixels from the top.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <!-- Sections  -->
+            <section id="landing">
+                <video autoplay loop muted poster="img/poster.jpg" id="bgvid">
+                    <source src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4">
+                </video>
+            </section>
 
-        <section id="methods" class="shadower">
-            <div class="bcg" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;"
-                data-anchor-target="#methods" style="background-position: 50% 0px;">
-                <div class="hsContainer">
-                    <div class="hsContent" data-center="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#methods h2">
-                        <h2>Fade out elements before
-                        <br />
-                            they leave viewport</h2>
-                        <p>
-                            This slide moves background image at a slower speed then the page scroll. Text is fading out to opacity 0 at 106
-                        pixels from the top.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="pricing" class="">
-            <div class="bcg">
-                <div class="hsContainer">
-                    <div class="hsContent">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contacts" class="shadower text-center">
-            <!-- <div class="row"> -->
-            <div class="contact-section">
-                <div class="container">
-                    <h2>Contact Us</h2>
-                    <div class="row" style="section-content">
-                        <div class="col-md-6">
-                            <table>
-                                <tr>
-                                    <td><i class="fa fa-home fa-2x"></i></td>
-                                    <td>38 Architect Jordan Milanov str.</td>
-                                </tr>
-                                <tr>
-                                    <td><i class="fa fa-mobile fa-3x"></i></td>
-                                    <td>+359 887 717 276</td>
-                                </tr>
-                                <tr>
-                                    <td><a href="mailto:office@pbioc.com"><i class="fa fa-envelope-o fa-2x"></i></a></td>
-                                    <td><a href="mailto:office@pbioc.com">office@pbioc.com</a></td>
-                                </tr>
-                            </table>
-
-                            <div class="banner-social-buttons">
-                                <a href="https://facebook.com/pbioc" class="" style="padding: 10px" target="_blank">
-                                    <i class="fa fa-facebook fa-3x"></i>
-                                </a>
-
-                                <a href="https://www.linkedin.com/nhome/" class="" style="padding: 10px" target="_blank">
-                                    <i class="fa fa-linkedin fa-3x"></i>
-                                </a>
-
-                                <a href="http://www.pinterest.com/" class="" style="padding: 10px" target="_blank">
-                                    <i class="fa fa-pinterest-square fa-3x"></i>
-                                </a>
-                            </div>
+            <section id="team">
+                <div class="bcg" data-0="background-postition: 110% 80%;" data-top="background-position: 150% 90%;" data-anchor-target="#team">
+                    <div class="hsContainer">
+                        <div class="hsContent">
+                            <h2 data-center="opacity: 1" data--200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0"
+                                data-anchor-target="#team h2" class="">Fade me in and out</h2>
+                            <p data-center="opacity: 1" data--200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0"
+                                data-anchor-target="#team h2" class="">
+                                Here we are changing the background color from blue to black. Text is fading
+                            in at 206 pixels from the bottom and fading out 106 pixels from the top.
+                            </p>
                         </div>
-                        <div class="col-md-6">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.205991239886!2d23.33333689999999!3d42.6781787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa85af39f43bdb%3A0x764b661931f5dc2!2z0YPQuy4g4oCe0LDRgNGFLiDQmdC-0YDQtNCw0L0g0JzQuNC70LDQvdC-0LLigJwgMzgsIDExNjQg0KHQvtGE0LjRjw!5e0!3m2!1sbg!2sbg!4v1412811241353" width="100%" height="350" frameborder="0"></iframe>
-                          </div>
                     </div>
                 </div>
-        </section>
+            </section>
+
+            <section id="methods" class="shadower">
+                <div class="bcg" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;"
+                    data-anchor-target="#methods" style="background-position: 50% 0px;">
+                    <div class="hsContainer">
+                        <div class="hsContent" data-center="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#methods h2">
+                            <h2>Fade out elements before
+                            <br />
+                                they leave viewport</h2>
+                            <p>
+                                This slide moves background image at a slower speed then the page scroll. Text is fading out to opacity 0 at 106
+                            pixels from the top.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="pricing" class="">
+                <div class="bcg">
+                    <div class="hsContainer">
+                        <div class="hsContent">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Contact Section -->
+            <section id="contacts" class="shadower text-center">
+                <!-- <div class="row"> -->
+                <div class="contact-section">
+                    <div class="container">
+                        <h2>Contact Us</h2>
+                        <div class="row" style="section-content">
+                            <div class="col-md-6">
+                                <table>
+                                    <tr>
+                                        <td><i class="fa fa-home fa-2x"></i></td>
+                                        <td>38 Architect Jordan Milanov str.</td>
+                                    </tr>
+                                    <tr>
+                                        <td><i class="fa fa-mobile fa-3x"></i></td>
+                                        <td>+359 887 717 276</td>
+                                    </tr>
+                                    <tr>
+                                        <td><a href="mailto:office@pbioc.com"><i class="fa fa-envelope-o fa-2x"></i></a></td>
+                                        <td><a href="mailto:office@pbioc.com">office@pbioc.com</a></td>
+                                    </tr>
+                                </table>
+
+                                <div class="banner-social-buttons">
+                                    <a href="https://facebook.com/pbioc" class="" style="padding: 10px" target="_blank">
+                                        <i class="fa fa-facebook fa-3x"></i>
+                                    </a>
+
+                                    <a href="https://www.linkedin.com/nhome/" class="" style="padding: 10px" target="_blank">
+                                        <i class="fa fa-linkedin fa-3x"></i>
+                                    </a>
+
+                                    <a href="http://www.pinterest.com/" class="" style="padding: 10px" target="_blank">
+                                        <i class="fa fa-pinterest-square fa-3x"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.205991239886!2d23.33333689999999!3d42.6781787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa85af39f43bdb%3A0x764b661931f5dc2!2z0YPQuy4g4oCe0LDRgNGFLiDQmdC-0YDQtNCw0L0g0JzQuNC70LDQvdC-0LLigJwgMzgsIDExNjQg0KHQvtGE0LjRjw!5e0!3m2!1sbg!2sbg!4v1412811241353" width="100%" height="350" frameborder="0"></iframe>
+                              </div>
+                        </div>
+                    </div>
+            </section>
+
+        </div>
+
+
 
         <!-- Footer -->
         <footer>
@@ -195,6 +180,7 @@
             </div>
         </footer>
     </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.imageloader.js"></script>
     <script src="js/jquery.transit.min.js"></script>
@@ -210,6 +196,14 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/pbioc.js"></script>
+
+    <!-- Menu Toggle Script -->
+    <script>
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+    </script>
 </body>
 
 </html>
