Removed video libs

--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,8 @@
         <div class="main" id="page-content-wrapper" >
             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle" style="position: absolute; top: 10px;">Toggle Menu</a>
             <!-- Arrow -->
-            <div class="intro">
-                <div class="intro-body">
+            <div class="arrow">
+                <div class="arrow-body">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
@@ -190,9 +190,6 @@
 
     <script src="js/skrollr.js"></script>
     <script src="js/modernizr.js"></script>
-
-    <script src="//vjs.zencdn.net/4.9/video.js"></script>
-    <script src="js/bigvideo.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/pbioc.js"></script>
